--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: rgb(106, 106, 160);
-            color: white;
+            color: white; /* Comentário em CSS */
             font: normal 20pt Arial;
         }
 
@@ -17,14 +17,16 @@
     </style>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
+    <h1>Olá, mundo!</h1> <!-- Comentário em HTML -->
     <p>Já me livrei da maldição!!</p>
 
-    <!-- SEMPRE ANTES DO /body !!! -->
     <script>
-        window.alert('Minha primeira mensagem!'); // " ; " é opcional no JS
-        window.confirm('Está gostando de JS?'); // Janela com botão OK e Cancel
-        window.prompt('Qual é seu nome?'); // Vai perguntar o nome...
+        var n1 = Number(window.prompt('Digite um número: ')) // String -> Integer
+        var n2 = Number(window.prompt('Digite outro número: ')) // String -> Integer
+        var soma = n1 + n2
+        alert(`A soma entre ${n1} e ${n2} é igual a ${soma}`) // Concatenação
+        // number + number para adição
+        // string + string para concatenação
     </script>
 </body>
 </html>
